--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -1,2 +1,7 @@
 <link rel="shortcut icon" href="https://justinmahar.github.io/silly-password-generator/favicon.ico" />
-<link rel="icon" type="image/png" href="https://justinmahar.github.io/silly-password-generator/favicon.png" sizes="512x512" />
+<link
+  rel="icon"
+  type="image/png"
+  href="https://justinmahar.github.io/silly-password-generator/favicon.png"
+  sizes="512x512"
+/>
